--- a/src/components/DetailFilms/BookTicket.scss
+++ b/src/components/DetailFilms/BookTicket.scss
@@ -128,18 +128,6 @@
 
                                 iframe {
                                     width: 140px !important;
-
-                                    // .svg {
-                                    //     .plugin {
-                                    //         .pluginSkinLight {
-                                    //             display        : flex;
-                                    //             justify-content: center;
-                                    //         }
-                                    //     }
-
-                                    // }
-
-
                                 }
                             }
                         }
@@ -192,114 +180,14 @@
     }
 }
 
-.content-film {
-    .row-content {
+.content-calendar {
+    .row-book {
         padding-top: 30px;
 
-        .col-left {
-            padding-right: 30px;
-
+        .box {
             .title {
-                h5 {
-                    position      : relative;
-                    text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
-                    font-weight   : bold;
-                }
+                padding-bottom: 20px;
 
-                &:after {
-                    content     : "";
-                    position    : absolute;
-                    display     : block;
-                    //left      : 13px;
-                    width       : 10%;
-                    height      : 3px;
-                    background  : #fcaf17;
-                }
-            }
-
-            .content {
-                padding-top: 20px;
-
-                p {
-                    text-align: justify;
-                }
-            }
-
-            .discount {
-                padding-top   : 30px;
-                padding-bottom: 100px;
-
-                .title-discount {
-                    h5 {
-                        position      : relative;
-                        text-transform: uppercase;
-                        font-size     : 13pt;
-                        color         : #000000;
-                        font-weight   : bold;
-                    }
-
-                    &:after {
-                        content     : "";
-                        position    : absolute;
-                        display     : block;
-                        //left      : 13px;
-                        width       : 15%;
-                        height      : 3px;
-                        background  : #fcaf17;
-                    }
-                }
-
-                .slide-discount {
-                    //padding-top  : 10px;
-                    //display: flex;
-
-                    .slick-slider {
-                        padding-top: 15px;
-                        width      : 90%;
-                        margin     : 0 auto;
-
-                        .slick-arrow {
-                            //background-color: #000;
-
-                            &:before {
-                                color: #000;
-                            }
-                        }
-
-                        .slick-list {
-                            //text-align: center;
-
-                            .slick-track {
-                                img {
-                                    display: flex;
-                                    margin : auto;
-                                    width  : 100%;
-                                }
-                            }
-                        }
-                    }
-
-                    .slick-dots {
-                        bottom: -35px;
-
-                        li button {
-                            margin-top: 10px;
-
-                            &::before {
-                                color    : #000;
-                                font-size: 12px;
-                            }
-                        }
-                    }
-                }
-            }
-
-        }
-
-        .col-right {
-            .title {
                 h5 {
                     position      : relative;
                     text-transform: uppercase;
@@ -312,49 +200,126 @@
                     content   : "";
                     position  : absolute;
                     display   : block;
-                    left      : 13px;
-                    width     : 30%;
+                    width     : 15%;
                     height    : 3px;
+                    margin-top: -5px;
                     background: #fcaf17;
                 }
             }
 
-            .col-image {
-                padding-top: 20px;
+            .combobox-group {
+                .row-combobox {
 
-                .image-pdc {
-                    flex-direction: column;
+                    .date {
+                        display: flex;
 
-                    img {
-                        width: 100%;
-                    }
-
-                    .vn {
-                        text-transform: uppercase;
-                        font-weight   : bold;
-                        color         : #000000;
-                    }
-
-                    .eng {
-                        text-transform: uppercase;
-                        color         : #555555;
-
-                    }
-                }
-
-                .link-read-more {
-                    text-align: center;
-
-                    a {
-                        text-decoration: none;
-                        text-transform : uppercase;
-                        color          : #fcaf17;
-                        font-weight    : bold;
+                        input {
+                            width        : 100%;
+                            align-items  : center;
+                            border       : 1px solid #c4c4c4;
+                            border-radius: 5px;
+                        }
                     }
                 }
             }
 
+            .calendar-group {
+                padding-top: 20px;
+
+                .calender {
+                    border: 1px solid #000000;
+
+                    .title-cal {
+                        padding-left    : 20px;
+                        background-color: #000000;
+                        height          : 40px;
+
+                        h5 {
+                            line-height   : 40px;
+                            text-transform: uppercase;
+                            color         : #ffffff;
+                        }
+                    }
+
+                    .type-film {
+                        padding-left    : 20px;
+                        padding-top     : 10px;
+                        //padding-bottom: 10px;
+                    }
+
+                    .btn-group {
+                        padding-left: 20px;
+
+                        button {
+                            margin          : 20px;
+                            background-color: #fff;
+                            border          : 1px solid #c4c4c4;
+
+                        }
+                    }
+                }
+            }
 
         }
+    }
+
+    .col-right {
+        .title {
+            h5 {
+                position      : relative;
+                text-transform: uppercase;
+                font-size     : 13pt;
+                color         : #000000;
+                font-weight   : bold;
+            }
+
+            &:after {
+                content   : "";
+                position  : absolute;
+                display   : block;
+                left      : 13px;
+                width     : 30%;
+                height    : 3px;
+                margin-top: -5px;
+                background: #fcaf17;
+            }
+        }
+
+        .col-image {
+            padding-top: 20px;
+
+            .image-pdc {
+                flex-direction: column;
+
+                img {
+                    width: 100%;
+                }
+
+                .vn {
+                    text-transform: uppercase;
+                    font-weight   : bold;
+                    color         : #000000;
+                }
+
+                .eng {
+                    text-transform: uppercase;
+                    color         : #555555;
+
+                }
+            }
+
+            .link-read-more {
+                text-align: center;
+
+                a {
+                    text-decoration: none;
+                    text-transform : uppercase;
+                    color          : #fcaf17;
+                    font-weight    : bold;
+                }
+            }
+        }
+
+
     }
 }
