--- a/src/components/ChangePassword/ChangePassword.scss
+++ b/src/components/ChangePassword/ChangePassword.scss
@@ -2,4 +2,43 @@
     background-image : url(../../assets/bg_quen_mat_khau.jpg);
     background-repeat: no-repeat;
     background-size  : cover;
+
+    .con-change {
+        max-width: 1400px;
+
+        .row-input-change {
+            .col-left {
+                float : none;
+                margin: auto;
+
+                .form-group {
+                    display: flex;
+                    margin : 50px 0px 50px 0px;
+
+                    label {
+                        text-transform: capitalize;
+                        font-weight   : bold;
+                        height        : 35px;
+                        line-height   : 40px;
+                    }
+
+                    .btn-change {
+                        height          : 40px;
+                        text-transform  : capitalize;
+                        border          : none;
+                        background-color: #fcaf17;
+                        color           : #ffffff;
+                        font-weight     : bold;
+                        border-radius   : 5px;
+                    }
+                }
+            }
+
+            .col-right {
+                img {
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
