--- a/src/components/ForgetPassword/ForgetPassword.scss
+++ b/src/components/ForgetPassword/ForgetPassword.scss
@@ -16,6 +16,7 @@
 
                 .form-group {
                     display: flex;
+                    margin : 50px 0px 50px 0px;
 
                     label {
                         text-transform: capitalize;
