--- a/src/components/ListMovie/DanhSachPhim.scss
+++ b/src/components/ListMovie/DanhSachPhim.scss
@@ -1,5 +1,5 @@
 .list-movie-container {
-    width: 100%;
+    width : 100%;
     height: 800px;
 
     padding: 20px 100px;
@@ -8,47 +8,49 @@
 
         .playing-movie,
         .upcoming-movie {
-            padding: 10px;
-            text-transform: uppercase;
-            color: #555555;
+            padding        : 10px;
+            text-transform : uppercase;
+            color          : #555555;
             text-decoration: none;
-            opacity: 0.5;
+            opacity        : 0.5;
 
             &.active {
-                color: orange;
+                color  : orange;
                 opacity: 1;
             }
 
             &:hover {
                 opacity: 1;
             }
+
+            cursor: pointer;
         }
     }
 
     .list-movie {
         margin-top: 20px;
-        height: 400px;
-        padding: 10px;
+        height    : 400px;
+        padding   : 10px;
 
         .film {
-            width: 100%;
+            width : 100%;
             height: 100%;
             cursor: pointer;
 
             .img-film {
-                width: 300px;
+                width : 300px;
                 height: 200px;
             }
 
             .name-film {
-                font-size: 14px;
-                text-transform: uppercase;
-                font-weight: 700;
-                margin-top: 10px;
-                margin-bottom: 5px;
-                display: block;
+                font-size      : 14px;
+                text-transform : uppercase;
+                font-weight    : 700;
+                margin-top     : 10px;
+                margin-bottom  : 5px;
+                display        : block;
                 text-decoration: none;
-                color: #000;
+                color          : #000;
             }
 
             .desc-film {
@@ -56,23 +58,23 @@
             }
         }
 
-        .pagination {
-            justify-content: center;
+        // .pagination {
+        //     justify-content: center;
 
-            .page-link {
-                color: #555555;
+        //     .page-link {
+        //         color: #555555;
 
-                .visually-hidden {
-                    display: none;
-                }
-            }
+        //         .visually-hidden {
+        //             display: none;
+        //         }
+        //     }
 
 
-            .paginationItemStyle.active .page-link {
-                background-color: #FCAF17 !important;
-                border-color: #FCAF17;
-                color: #fff;
-            }
-        }
+        //     .paginationItemStyle.active .page-link {
+        //         background-color: #FCAF17 !important;
+        //         border-color    : #FCAF17;
+        //         color           : #fff;
+        //     }
+        // }
     }
 }
