--- a/src/components/ReviewMovie/ReviewFilms.scss
+++ b/src/components/ReviewMovie/ReviewFilms.scss
@@ -1,230 +1,83 @@
-.review-films-container {
-    // background-color: red;
-    width: 100%;
-    height: 800px;
-    display: flex;
-    padding: 20px 100px;
+.review-con {
+    max-width: 1400px;
 
-    .review-films {
-        width: 70%;
-        // background-color: yellow;
-        height: 100%;
-        padding: 10px;
+    .row-review {
+        padding-top: 30px;
 
-        .title-review {
-            font-weight: 700;
-            text-transform: uppercase;
-            margin-top: 10px;
+        .col-left {
+            .list-films {
+                .blog {
+                    display: flex;
 
-            &::after {
-                display: block;
-                width: 100px;
-                height: 2px;
-                margin-top: 8px;
-                content: '';
-                background-color: #FCAF17;
-            }
-        }
-
-        .list-films {
-            width: 100%;
-            height: 100%;
-
-            .blog {
-                display: table;
-                width: 100%;
-                height: 150px;
-                margin: 30px 0;
-                // background-color: #b26767;
-
-                .movie-thumb {
-                    float: left;
-                    position: relative;
-                    margin: 0 20px 0 0;
-
-                    img {
-                        display: block;
-                        width: 220px;
-                        height: auto;
-                    }
-                }
-
-                h5 {
-                    font-size: 18px;
-                    margin-bottom: 8px;
-                    text-transform: capitalize;
-                    display: block;
-                    display: -webkit-box;
-                    max-width: 100%;
-                    -webkit-line-clamp: 2;
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    max-height: 58px;
-
-                    a {
-                        line-height: 22px;
-                        color: #43464b;
-                        text-decoration: none;
-
-                        &:hover {
-                            color: #FCAF17;
+                    .movie-thumb {
+                        .img-review {
+                            width     : 100%;
+                            display   : block;
+                            object-fit: contain;
                         }
                     }
-                }
 
-                .fb-like {
-                    span {
-                        margin-right: 50px;
-                        margin-top: 10px;
+                    .row-fc {
+                        margin-top : 20px;
+                        margin-left: 20px;
 
-                        iframe {
-                            width: 160px !important;
+                        h5 {
+                            font-size     : 18px;
+                            text-transform: capitalize;
+                            max-width     : 100%;
 
+                            .link {
+                                color: #43464b;
+
+                                &:hover {
+                                    color: #FCAF17;
+                                }
+                            }
+                        }
+
+                        .list-fc {
+                            list-style-type: none;
+                            display        : flex;
+
+                            .fb-like {
+                                span {
+                                    margin-right: 40px;
+                                    margin-top  : 5px;
+
+                                    iframe {
+                                        width: 160px !important;
+
+                                    }
+                                }
+                            }
+
+                            li {
+                                margin     : 0px 20px 0px 30px;
+                                line-height: 40px;
+                            }
+
+                            .rating-movie.rating-home {
+                                background-size: 20px;
+                                height         : 25px;
+                                padding-left   : 24px;
+                                margin-left    : 10px;
+                            }
+
+                            .rating-movie {
+                                font-size          : 11px;
+                                height             : 40px;
+                                background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                                background-size    : 21px;
+                                padding-left       : 30px;
+                                background-position: left center;
+                                display            : table-cell;
+                                vertical-align     : middle;
+                            }
                         }
                     }
-                }
-
-                li {
-                    display: inline-block;
-                    vertical-align: middle;
-                }
-
-                .rating-movie.rating-home {
-                    background-size: 20px;
-                    height: 25px;
-                    padding-left: 24px;
-                    margin-left: 10px;
-                }
-
-                .rating-movie {
-                    font-size: 11px;
-                    height: 40px;
-                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size: 21px;
-                    padding-left: 30px;
-                    background-position: left center;
-                    display: table-cell;
-                    vertical-align: middle;
-                }
-
-                .btn-review {
-                    height: 25px;
-                    width: 100%;
-                    font-size: 10px;
-                    margin-left: 30px !important;
-                    margin: 0 auto;
-                    padding: 0;
-                    display: inline-block;
-                    line-height: 20px;
-                    text-align: center;
-                    font-weight: 700;
-                }
-            }
-        }
-
-
-    }
-
-    .upcoming-films {
-        width: 30%;
-        // background-color: green;
-        height: 100%;
-        padding: 10px;
-
-        .title-review {
-            font-weight: 700;
-            text-transform: uppercase;
-            margin-top: 10px;
-
-            &::after {
-                display: block;
-                width: 100px;
-                height: 2px;
-                margin-top: 8px;
-                content: '';
-                background-color: #FCAF17;
-            }
-        }
-
-        .list-films {
-            width: 100%;
-            height: 100%;
-
-            .blog {
-                display: table;
-                width: 100%;
-                height: 150px;
-                margin: 30px 0;
-                // background-color: #b26767;
-
-                .movie-thumb {
-                    position: relative;
-                    margin: 0 20px 0 0;
-
-                    img {
-                        display: block;
-                        width: 100%;
-                        height: auto;
-                    }
-                }
-
-                h5 {
-                    margin-top: 10px;
-                    font-size: 18px;
-                    margin-bottom: 8px;
-                    text-transform: capitalize;
-                    display: block;
-                    display: -webkit-box;
-                    max-width: 100%;
-                    -webkit-line-clamp: 2;
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    max-height: 58px;
-
-                    a {
-                        line-height: 22px;
-                        color: #43464b;
-                        text-decoration: none;
-
-                        &:hover {
-                            color: #FCAF17;
-                        }
-                    }
-                }
-
-                .rating-movie.rating-home {
-                    background-size: 20px;
-                    height: 25px;
-                    padding-left: 24px;
-                    margin-left: 10px;
-                }
-
-                .rating-movie {
-                    font-size: 11px;
-                    height: 40px;
-                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size: 21px;
-                    padding-left: 30px;
-                    background-position: left center;
-                    display: table-cell;
-                    vertical-align: middle;
-                }
-
-                .btn-review {
-                    height: 25px;
-                    width: 100%;
-                    font-size: 10px;
-                    margin-left: 30px !important;
-                    margin: 0 auto;
-                    padding: 0;
-                    display: inline-block;
-                    line-height: 20px;
-                    text-align: center;
-                    font-weight: 700;
                 }
             }
         }
     }
+
 }
