--- a/src/components/Share/Header.scss
+++ b/src/components/Share/Header.scss
@@ -532,9 +532,13 @@
 
             .nav-link {
                 color         : #fff !important;
-                font-size     : 15px;
+                font-size     : 15px !important;
                 text-transform: uppercase;
-                font-weight   : 500px;
+                font-weight   : 500px !important;
+
+                &:hover {
+                    color: rgb(208, 255, 0) !important;
+                }
 
             }
 
@@ -553,14 +557,18 @@
                         .sub-nav-item {
                             width          : 100%;
                             display        : flex;
+                            margin         : 20px 0px 20px 0px;
                             justify-content: center;
                             align-items    : center;
 
+
                             .sub-nav-link {
-                                text-decoration: none;
+                                text-decoration : none;
+                                //margin-left   : 30px;
+                                margin-right    : 35px;
 
                                 &:hover {
-                                    color: aqua;
+                                    color: rgb(208, 255, 0);
                                 }
 
                             }
