--- a/src/components/BuyTicket/BuyTicket.scss
+++ b/src/components/BuyTicket/BuyTicket.scss
@@ -51,6 +51,10 @@
                             background-color: #f3e6cb;
                         }
 
+                        &.active {
+                            background-color: #f3e6cb;
+                        }
+
                         .showtimes-row {
                             height: 100%;
                             width: 100%;
