--- a/src/components/BuyTicket/BookTicket.scss
+++ b/src/components/BuyTicket/BookTicket.scss
@@ -1,12 +1,12 @@
 .bookingDetailController {
-    height            : 800px;
-    width             : 100%;
-    padding           : 0 80px;
+    height: 800px;
+    width: 100%;
+    padding: 0 80px;
     //background-color: red;
 
     .ticket-wrapper {
         // background-color: blue;
-        width : 100%;
+        width: 100%;
         height: 100%;
 
         .book-ticket,
@@ -29,42 +29,42 @@
             }
 
             .title-book {
-                padding         : 20px;
-                text-align      : center;
+                padding: 20px;
+                text-align: center;
                 background-color: orange;
-                color           : #fff;
-                font-size       : 15px;
-                font-weight     : 650;
-                text-transform  : uppercase;
+                color: #fff;
+                font-size: 15px;
+                font-weight: 650;
+                text-transform: uppercase;
             }
 
             .inline-group {
 
-                max-width : 9rem;
-                width     : 200px;
+                max-width: 9rem;
+                width: 200px;
                 /* height : 20px; */
                 /* height : 2px; */
-                padding   : .5rem;
+                padding: .5rem;
                 text-align: center;
-                margin    : 0 auto;
+                margin: 0 auto;
 
                 .input-group-prepend {
                     margin-right: -1px;
-                    height      : 30px;
+                    height: 30px;
 
                     /* width: 28px; */
                     /* height: 30%; */
                     button {
-                        padding  : 0px;
-                        width    : 30px;
+                        padding: 0px;
+                        width: 30px;
                         font-size: 12px;
                     }
                 }
 
                 .input-group-append {
                     button {
-                        padding  : 0px;
-                        width    : 30px;
+                        padding: 0px;
+                        width: 30px;
                         font-size: 12px;
                     }
                 }
@@ -72,51 +72,58 @@
 
             .inline-group .form-control {
                 text-align: center;
-                height    : 30px;
+                height: 30px;
             }
 
             .form-control[type="number"]::-webkit-inner-spin-button,
             .form-control[type="number"]::-webkit-outer-spin-button {
                 -webkit-appearance: none;
-                margin            : 0;
+                margin: 0;
             }
         }
     }
 
     .ticket-header {
-        width           : 100%;
-        background-color: #f1f1f1;
-        padding         : 10px;
-        margin-bottom   : 15px;
+        width: 100%;
+        background-color: #fafafa;
+        padding: 10px;
+        margin-bottom: 15px;
     }
 
     .ticket-detail {
         .ticket-title {
-            font-size    : 14px;
-            line-height  : 20px;
-            color        : #43464b;
-            font-weight  : bold;
+            margin-top: 15px;
+            font-size: 14px;
+            line-height: 20px;
+            text-transform: uppercase;
+            color: #43464b;
+            font-weight: bold;
             text-overflow: ellipsis;
-            overflow     : hidden;
-            white-space  : nowrap;
+            overflow: hidden;
+            white-space: nowrap;
+
+            &.vn {
+                margin-top: 5px;
+                margin-bottom: 10px;
+            }
         }
 
         .submit-container {
             padding-top: 20px;
-            display    : flex;
-            height     : 70px;
+            display: flex;
+            height: 70px;
 
             .button-book-submit {
                 width: 100%;
 
                 .btn-book {
                     background-color: #FCAF17;
-                    padding         : 10px;
-                    width           : 100%;
-                    height          : 48px;
-                    font-weight     : 700;
-                    color           : #fff;
-                    text-transform  : uppercase;
+                    padding: 10px;
+                    width: 100%;
+                    height: 48px;
+                    font-weight: 700;
+                    color: #fff;
+                    text-transform: uppercase;
                 }
             }
         }
