--- a/src/components/SupportQA/HoTroGiaiDap.scss
+++ b/src/components/SupportQA/HoTroGiaiDap.scss
@@ -41,117 +41,154 @@
             }
 
             .accordion {
-                padding-left: 60px;
+                .card {
+                    .card-header {
+                        h5 {
+                            .title {
+                                text-transform: capitalize;
+                                font-size     : 13pt;
+                                font-weight   : 400;
 
-                .btn-show {
-                    background-color: #eee;
-                    color           : #444;
-                    cursor          : pointer;
-                    padding         : 18px;
-                    width           : 100%;
-                    border          : none;
-                    text-align      : left;
-                    outline         : none;
-                    font-size       : 15px;
-                    transition      : 0.4s;
-
-                    .active &:hover {
-                        background-color: #ccc;
+                                .icon {
+                                    &::before {
+                                        content: "\002b";
+                                    }
+                                }
+                            }
+                        }
                     }
 
-                    &:after {
-                        content    : '\002B';
-                        color      : #777;
-                        font-weight: bold;
-                        float      : right;
-                        margin-left: 5px;
-                    }
+                    .collapse {
+                        .card-body {
+                            p {
+                                text-align: justify;
+                                font-size : 13pt;
+                            }
 
-                    .active:after {
-                        content: "\2212";
+                            ul {
+
+                                li {
+                                    text-align: justify;
+                                }
+                            }
+                        }
                     }
                 }
-
-                .answer {
-                    padding           : 0 18px;
-                    background-color  : white;
-                    max-height        : 0;
-                    //transition      : height 5s ease-out;
-                    overflow          : hidden;
-
-                }
-
-
-
             }
         }
 
-        .col-right {
-            .title {
-                h5 {
-                    position      : relative;
+        // .accordion {
+        //     padding-left: 60px;
+
+        //     .btn-show {
+        //         background-color: #eee;
+        //         color           : #444;
+        //         cursor          : pointer;
+        //         padding         : 18px;
+        //         width           : 100%;
+        //         border          : none;
+        //         text-align      : left;
+        //         outline         : none;
+        //         font-size       : 15px;
+        //         transition      : 0.4s;
+
+        //         // .active &:hover {
+        //         //     background-color: #ccc;
+        //         // }
+
+        //         &:after {
+        //             content    : '\002B';
+        //             color      : #777;
+        //             font-weight: bold;
+        //             float      : right;
+        //             margin-left: 5px;
+        //         }
+
+        //         .active:after {
+        //             content: "\002D";
+        //         }
+
+        //     }
+
+        //     .answer {
+        //         padding           : 0 18px;
+        //         background-color  : white;
+        //         max-height        : 0;
+        //         //transition      : height 5s ease-out !important;
+        //         overflow          : hidden;
+
+        //     }
+
+
+
+        // }
+    }
+
+    .col-right {
+        .title {
+            h5 {
+                position      : relative;
+                text-transform: uppercase;
+                font-size     : 13pt;
+                color         : #000000;
+                font-weight   : bold;
+            }
+
+            &:after {
+                content   : "";
+                position  : absolute;
+                display   : block;
+                left      : 13px;
+                width     : 30%;
+                height    : 3px;
+                margin-top: -5px;
+                background: #fcaf17;
+            }
+        }
+
+        .col-image {
+            padding-top: 20px;
+
+            .image-pdc {
+                flex-direction: column;
+
+                img {
+                    width: 100%;
+                }
+
+                .vn {
                     text-transform: uppercase;
-                    font-size     : 13pt;
-                    color         : #000000;
                     font-weight   : bold;
+                    color         : #000000;
                 }
 
-                &:after {
-                    content   : "";
-                    position  : absolute;
-                    display   : block;
-                    left      : 13px;
-                    width     : 30%;
-                    height    : 3px;
-                    margin-top: -5px;
-                    background: #fcaf17;
+                .eng {
+                    text-transform: uppercase;
+                    color         : #555555;
+
                 }
             }
 
-            .col-image {
-                padding-top: 20px;
+            .link-read-more {
+                text-align: center;
 
-                .image-pdc {
-                    flex-direction: column;
-
-                    img {
-                        width: 100%;
-                    }
-
-                    .vn {
-                        text-transform: uppercase;
-                        font-weight   : bold;
-                        color         : #000000;
-                    }
-
-                    .eng {
-                        text-transform: uppercase;
-                        color         : #555555;
-
-                    }
-                }
-
-                .link-read-more {
-                    text-align: center;
-
-                    a {
-                        text-decoration: none;
-                        text-transform : uppercase;
-                        color          : #fcaf17;
-                        font-weight    : bold;
-                    }
+                a {
+                    text-decoration: none;
+                    text-transform : uppercase;
+                    color          : #fcaf17;
+                    font-weight    : bold;
                 }
             }
-
-
         }
+
 
     }
+
 }
 
+
 .activeShow {
-    max-height        : fit-content !important;
-    transition        : all 2s ease !important;
-    -moz-transition   : all 2s ease !important;
-    -webkit-transition: all 2s ease !important;
+    max-height: fit-content !important;
+    transition: max-height 5s ease-out 2s;
+    margin-top: 20px;
 }
